--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <link ref="stylesheet" href="/src/stylesheet.css">
+        <link rel="stylesheet" href="/src/stylesheet.css">
 		<title>My CV</title>
     	</head>
 	<body>
