--- a/src/index.html
+++ b/src/index.html
@@ -71,17 +71,17 @@
         <div class="explist">
             <ul>
                 <li>
-                    <div class="date">Job 1 date</div> 
+                    <div class="date">2015-2021</div> 
                     <div class="jobinfo">
-                        <div class="jobtitle">Job 1 Title</div> 
-                    <div class ="jobdesc">Job 1 description</div>
+                        <div class="jobtitle">National Technical Director of the Portuguese Swimming Federation</div> 
+                    <div class ="jobdesc">Management and lidership of coaches. Writte rules and regulations about the sport. Represent the national team in international competitions.</div>
                     </div>
                 </li>
                 <li>
-                    <div class="date">Job 2 date</div> 
+                    <div class="date">August 2021</div> 
                     <div class="jobinfo">
-                        <div class="jobtitle">Job 2 title</div> 
-                    <div class ="jobdesc">Job 2 description</div>
+                        <div class="jobtitle">Olympic games television commentator</div> 
+                    <div class ="jobdesc">Comment and share relevant information about the sports performance. Analysis of the country's performance on live tv.</div>
                     </div>
                 </li>
             </ul>
